# frame

./: CMakeLists.txt  README.md
src/: binding.gyp  package.json  phash.cpp  phash.js  similar.js  test_video.js  video.cpp  video_decoder.cpp  video_decoder.h  video_wrapper.cpp  video_wrapper.h
test/: jd.cpp  test.cpp  test_brief.cpp  test_ffmpeg.js  test_phash.py
web/: package.json
web/public/: index.html
web/public/css/: style.css
web/public/js/: index.js
web/routes/: index.js
